logs/dag_id=dag_etl_paises/run_id=manual__2023-07-29T00:46:00.826764+00:00/task_id=transformar_datos/attempt=1.log
[2023-07-29 00:47:54,544] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: dag_etl_paises.transformar_datos manual__2023-07-29T00:46:00.826764+00:00 [queued]>
[2023-07-29 00:47:54,560] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: dag_etl_paises.transformar_datos manual__2023-07-29T00:46:00.826764+00:00 [queued]>
[2023-07-29 00:47:54,563] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2023-07-29 00:47:54,565] {taskinstance.py:1377} INFO - Starting attempt 1 of 2
[2023-07-29 00:47:54,567] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2023-07-29 00:47:54,594] {taskinstance.py:1397} INFO - Executing <Task(PythonOperator): transformar_datos> on 2023-07-29 00:46:00.826764+00:00
[2023-07-29 00:47:54,602] {standard_task_runner.py:52} INFO - Started process 4797 to run task
[2023-07-29 00:47:54,614] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'dag_etl_paises', 'transformar_datos', 'manual__2023-07-29T00:46:00.826764+00:00', '--job-id', '58', '--raw', '--subdir', 'DAGS_FOLDER/dag_etl_paises.py', '--cfg-path', '/tmp/tmp5frgs5wv', '--error-file', '/tmp/tmpso1cr0x6']
[2023-07-29 00:47:54,617] {standard_task_runner.py:80} INFO - Job 58: Subtask transformar_datos
[2023-07-29 00:47:54,776] {task_command.py:371} INFO - Running <TaskInstance: dag_etl_paises.transformar_datos manual__2023-07-29T00:46:00.826764+00:00 [running]> on host 068a3bc06d1c
[2023-07-29 00:47:55,148] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Belenpintor
AIRFLOW_CTX_DAG_ID=dag_etl_paises
AIRFLOW_CTX_TASK_ID=transformar_datos
AIRFLOW_CTX_EXECUTION_DATE=2023-07-29T00:46:00.826764+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-07-29T00:46:00.826764+00:00
[2023-07-29 00:47:55,233] {logging_mixin.py:115} INFO - asi el dataframe nombre         Business Freedom  Commute  ...  Travel Connectivity  Venture Capital
ciudad_nombre                             ...                                      
Aarhus                 9.940000  6.31175  ...               3.5360            2.512
Adelaide               9.399667  5.33625  ...               1.7765            2.640
Albuquerque            8.671000  5.05575  ...               1.4555            1.493
Almaty                 5.568000  5.87125  ...               4.5920            0.000
Amsterdam              8.836667  6.11850  ...               8.3245            6.107
...                         ...      ...  ...                  ...              ...
Winnipeg               8.966000  5.10450  ...               1.4755            0.000
Wroclaw                5.704333  4.95475  ...               2.2445            2.386
Yerevan                6.501000  5.64925  ...               1.7870            0.000
Zagreb                 5.720333  4.83000  ...               2.0280            1.775
Zurich                 8.888000  5.83950  ...               7.7335            3.872

[266 rows x 17 columns]
[2023-07-29 00:47:56,724] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/script_etl.py", line 92, in transform_data
    cursor.execute(insert_query_with_columns, [index] + values + [process_date])
psycopg2.errors.SyntaxError: syntax error at or near "ON"
LINE 24:         ) ON CONFLICT (city) DO NOTHING;
                   ^

[2023-07-29 00:47:56,782] {taskinstance.py:1420} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_etl_paises, task_id=transformar_datos, execution_date=20230729T004600, start_date=20230729T004754, end_date=20230729T004756
[2023-07-29 00:47:56,829] {standard_task_runner.py:97} ERROR - Failed to execute job 58 for task transformar_datos (syntax error at or near "ON"
LINE 24:         ) ON CONFLICT (city) DO NOTHING;
                   ^
; 4797)
[2023-07-29 00:47:56,870] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-07-29 00:47:56,958] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
